--- a/jogo/templates/jogo/defesas.html
+++ b/jogo/templates/jogo/defesas.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block title %}Minutos|Realmatismo Fc {% endblock %}
+{% block main %}
 <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
@@ -22,3 +25,4 @@
                 </div>
             </div>
         </div>
+{% endblock %}
