--- a/jogo/templates/jogo/artilharia.html
+++ b/jogo/templates/jogo/artilharia.html
@@ -1,4 +1,7 @@
- <div class="row">
+{% extends 'base.html' %}
+{% block title %}Minutos|Realmatismo Fc {% endblock %}
+{% block main %}
+<div class="row">
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
@@ -23,3 +26,4 @@
             </div>
         </div>
 </div>
+{% endblock %}
