--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -3,7 +3,7 @@
 {% block main %}
     <div class="row">
         <div class="col s12 m12 l12">
-            <div class="card hoverable">
+            <div class="card">
                 <div class="card-content">
                     <span class="card-title center">Perfil Atleta</span>
                     <div class="row">
@@ -34,15 +34,27 @@
 
     <div class="row">
         <div class="col s12 m12 l12">
-            <div class="card hoverable">
+            <div class="card">
                 <div class="card-content">
                     <span class="card-title center">Dados Atleta</span>
-                    Jogos Disputados: {{ atleta.jogos_realizados }}<br>
-                    Gols: {{ atleta.gols }}<br>
-                    Assistencias: {{ atleta.assistencia }}<br>
-                    Defesas: {{ atleta.defesa }}<br>
-                    Roubos: {{ atleta.roubo }}<br>
-                    Minutos Jogados: {{ atleta.minutos }}<br>
+                    <table>
+                        <tr>
+                            <td>J</td>
+                            <td>G</td>
+                            <td>A</td>
+                            <td>Def.</td>
+                            <td>Rou.</td>
+                            <td>Min.</td>
+                        </tr>
+                        <tr>
+                            <td>{{ atleta.jogos_realizados }}</td>
+                            <td>{{ atleta.gols }}</td>
+                            <td>{{ atleta.assistencia }}</td>
+                            <td>{{ atleta.defesa }}</td>
+                            <td>{{ atleta.roubo }}</td>
+                            <td>{{ atleta.minutos }}</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
