--- a/jogo/templates/jogo/noticia.html
+++ b/jogo/templates/jogo/noticia.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}Noticias|Realmatismo Fc {% endblock %}
 {% block main %}
-
+    <div class="col s12 m4">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ noticia.titulo }}</span>
+                {{ noticia.corpo }}
+                {{ noticia.data_inclusao }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
