--- a/jogo/templates/jogo/noticias.html
+++ b/jogo/templates/jogo/noticias.html
@@ -1,9 +1,40 @@
 {% extends 'base.html' %}
 {% block title %}Noticias|Realmatismo Fc {% endblock %}
 {% block main %}
-    {% for noticia in noticias %}
-        {{ noticia.titulo }}
-    {% empty %}
-        Sem Noticia
-    {% endfor %}
+     <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="card">
+                <div class="card-content">
+                    {% if noticias.count > 0 %}
+                        <ul class="collection with-header" style="border: none">
+                            <li class="collection-header"><h4>Jogos</h4></li>
+                            {% for noticia in noticias %}
+                                <li class="collection-item">
+                                       <div class="row">
+
+                                            <div class="col s9">
+                                                <div class="left-align">
+                                                    {{ noticia.titulo }}
+                                                </div>
+                                            </div>
+
+                                           <div class="col s3">
+                                               <div class="center-align">
+                                                 <a href="{% url 'noticia' noticia.pk %}" class="center" style="text-decoration: none;color: black">
+                                                     <i class="fas fa-newspaper fa-lg" aria-hidden="true"></i>Detalhes</a>
+                                                </div>
+                                            </div>
+                                       </div>
+
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        Sem Noticias
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
