--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
           <li><a href="{% url 'atletas' %}">Atletas</a></li>
           <li><a href="{% url 'noticias' %}">Notícias</a></li>
           <li><a href="{% url 'estatistica' %}">Tops</a></li>
+          <li><a href="{% url 'galeria' %}">Fotos</a></li>
       </ul>
     </div>
   </nav>
@@ -42,6 +43,7 @@
       <li><a href="{% url 'atletas' %}"><i class="fas fa-users fa-lg"></i> Atletas</a></li>
       <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg"></i>Notícias</a></li>
       <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg"></i>Tops</a></li>
+      <li><a href="{% url 'galeria' %}"><i class="fas fa-photo fa-lg"></i>Tops</a></li>
   </ul>
 
 <main>
