--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <i class="fab fa-facebook-square"></i><br>
+        <a href="http://facebook.com/realamatismofc/"><i class="fab fa-facebook-square"></i></a>
         <i class="fab fa-instagram"></i>
     </div>
 </div>
