--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,11 @@
       <ul class="right hide-on-med-and-down">
           <li><a href="{% url 'jogos' %}">Jogos</a></li>
           <li><a href="{% url 'atletas' %}">Atletas</a></li>
-          <li><a href="{% url 'noticias' %}">Notícias</a></li>
+          <li><a href="{% url 'time' %}">Time</a></li>
           <li><a href="{% url 'estatistica' %}">Tops</a></li>
+          <li><a href="{% url 'noticias' %}">Notícias</a></li>
           <li><a href="{% url 'galeria' %}">Fotos</a></li>
+
       </ul>
     </div>
   </nav>
@@ -40,10 +42,11 @@
     </div></li>
       <li><a href="{% url 'home' %}"><i class="fas fa-home fa-lg"></i>Inicio</a></li>
       <li><a href="{% url 'jogos' %}"><i class="fas fa-futbol fa-lg"></i> Jogos</a></li>
-      <li><a href="{% url 'atletas' %}"><i class="fas fa-users fa-lg"></i> Atletas</a></li>
-      <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg"></i>Notícias</a></li>
+      <li><a href="{% url 'atletas' %}"><i class="fas fa-user fa-lg"></i> Atletas</a></li>
+      <li><a href="{% url 'time' %}"><i class="fas fa-users fa-lg"></i>Time</a></li>
       <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg"></i>Tops</a></li>
-      <li><a href="{% url 'galeria' %}"><i class="fas fa-photo fa-lg"></i>Tops</a></li>
+      <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg"></i>Notícias</a></li>
+      <li><a href="{% url 'galeria' %}"><i class="fas fa-camera fa-lg"></i>Fotos</a></li>
   </ul>
 
 <main>
