--- a/jogo/templates/jogo/noticias.html
+++ b/jogo/templates/jogo/noticias.html
@@ -7,7 +7,7 @@
                 <div class="card-content">
                     {% if noticias.count > 0 %}
                         <ul class="collection with-header" style="border: none">
-                            <li class="collection-header"><h4>Jogos</h4></li>
+                            <li class="collection-header"><h4>Notícias</h4></li>
                             {% for noticia in noticias %}
                                 <li class="collection-item">
                                        <div class="row">
