--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,16 @@
 <div class="container">
     <div class="row">
-        <a href="http://facebook.com/realamatismofc/"><i class="fab fa-facebook-square"></i></a>
-        <i class="fab fa-instagram"></i>
+        <a style="list-style: none" href="http://facebook.com/realamatismofc/">
+            <i class="fab fa-facebook-square"></i>
+        </a>
+        <a style="list-style: none" href="http://facebook.com/realamatismofc/">
+            <i class="fab fa-instagram"></i>
+        </a>
     </div>
 </div>
+
 <div class="footer-copyright ">
     <div class="container black-text text-darken-2">
-        © 2018 Todos os direitos reservados para Diego Denzer versao 0.3
+        © 2018 Todos os direitos reservados para Diego Denzer versao 1.0
     </div>
 </div>
