--- a/jogo/templates/jogo/noticia.html
+++ b/jogo/templates/jogo/noticia.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Noticias|Realmatismo Fc {% endblock %}
+{% block title %}{{ noticia.titulo }}|Realmatismo Fc {% endblock %}
 {% block main %}
     <div class="col s12 m4">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">{{ noticia.titulo }}</span>
-                {{ noticia.corpo }}
-                {{ noticia.data_inclusao }}
+                <p>
+                    {{ noticia.corpo }}
+                </p>
+                <br>
+                publicado: {{ noticia.data_inclusao|date:"d M Y" }}
             </div>
         </div>
     </div>
