--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -41,10 +41,13 @@
                                     <li>
                                         {% if jogos.has_previous %}
                                             <a href="?page={{ jogos.previous_page_number }}">
-                                                <i class="material-icons">chevron_left</i>
+                                               <i class="fas fa-step-backward" aria-hidden="true"></i>
                                             </a>
+
+
                                         {% else %}
-                                            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                                            <li class="disabled"><a href="#!"><i class="fas fa-step-backward" aria-hidden="true"></i></a></li>
+
                                         {% endif %}
 
                                     </li>
@@ -61,16 +64,14 @@
 
                                          <li class="waves-effect">
                                              <a href="?page={{ jogos.next_page_number }}">
-                                                 <i class="fas fa-step-forward" aria-hidden="true"></i>
+                                                 <i class="fas fa-step-forward fa-2x" aria-hidden="true"></i>
                                              </a>
 
-                                             <a href="?page={{ jogos.paginator.num_pages }}">
-                                                 <i class="fas fa-forward" aria-hidden="true"></i>
-                                             </a>
+
                                          </li>
                                          {% else %}
                                                 <li class="disabled"><a href="#!"><i class="fas fa-step-forward" aria-hidden="true"></i></a></li>
-                                                <i class="fas fa-forward" aria-hidden="true"></i>
+
                                      {% endif %}
                                 </ul>
                             </div>
