--- a/jogo/templates/jogo/time.html
+++ b/jogo/templates/jogo/time.html
@@ -5,6 +5,7 @@
             <div class="card hoverable">
                 <div class="card-content">
                     <span class="card-title">Estatisticas</span>
+                
                     <table>
                         <tr>
                             <th>J</th>
@@ -33,10 +34,29 @@
     </div>
 
     <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m6 l6">
+
+             <div class="card hoverable">
+                <div class="card-content">
+                     <span class="card-title">Últimos Jogos</span>
+                    <ul class="pagination">
+
+                            {% for p in performace %}
+                                <li>
+                                <div class="card {% if p == 'V' %}green{% elif p == 'D'%}red{% else %}blue{% endif %}" style="width: 40px">
+                                    {{ p }}
+                                </div>
+                                </li>
+                            {% endfor %}
+                    </ul>
+                </div>
+            </div>
+
             <div class="card hoverable">
                 <div class="card-content">
                     <span class="card-title">Curiosidades</span>
+                    Maior Vitoria: {{ maior_vitoria }} <br>
+                    Maior Derrota: {{ maior_derrota }} <br>
                     Jogador Mais Velho: {{ jogador_velho.nome }} <br>
                     Jogador Mais Novo:  {{ jogador_novo.nome }}   <br>
                     Media idade: {{ media_idade }} <br>
