--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -69,7 +69,7 @@
 
                                     <div class="col s9">
                                         <div class="left-align">
-                                            <span class="title">{{ noticia.titulo }}</span>
+                                            <span class="title">{{ noticia.titulo }} / {{ noticia.data_inclusao|date:"d M Y" }}</span>
                                         </div>
                                     </div>
 
