--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{{ jogo.data }}|Realmatismo Fc {% endblock %}
+{% block title %}{{ jogo.adversario}}-{{ jogo.data }}|Realmatismo Fc {% endblock %}
 {% block main %}
    <div class="row">
         <div class="col s12 m12 l12">
