--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -6,34 +6,42 @@
             <div class="card">
                 <div class="card-content">
 
-                        <ul class="collection with-header" style="border: none">
-                            <li class="collection-header"><h4>Jogos</h4></li>
-                            {% for jogo in jogos %}
-                                <li class="collection-item">
-                                        <h6 class="center-align" style="color: {% if jogo.placar_real > jogo.placar_adversario %}#0f9d58
-                                        {% endif %}{% if jogo.placar_real < jogo.placar_adversario %}red
-                                        {% endif %} ">
-                                          REALMATISMO FC
-                                          {% if jogo.placar_real is not None %}
-                                            {{ jogo.placar_real }}
-                                          {% endif %}
-                                          <br>
-                                          X
-                                          <br>
-                                          {{ jogo.adversario.nome }}
-                                          {% if jogo.placar_adversario is not None %}
-                                            {{ jogo.placar_adversario }}
-                                          {% endif %}
-                                        </h6>
-                                <br>
-                                <div class="center-align">
-                                 <a href="{% url 'jogo' jogo.pk %}" class="center" style="text-decoration: none;color: black">
-                                     <i class="fas fa-futbol fa-lg" aria-hidden="true"></i>Detalhes</a>
-                                </div>
-                                </li>
 
+                            <h4>Jogos</h4>
+
+                            {% for jogo in jogos %}
+                                    <div class="row">
+                                        <div>
+                                            <h6>Realmatismo FC</h6>
+                                        </div>
+
+                                        <div>
+                                             <ul class="pagination">
+                                                <li>
+                                                {% if jogo.placar_real is not None %}
+                                                    <div style="width: 20px" class="card {% if jogo.placar_real > jogo.placar_adversario %}green{% elif jogo.placar_real < jogo.placar_adversario %}red{% else %}grey{% endif %}">
+                                                        {{ jogo.placar_real }}
+                                                    </div>
+                                                {% endif %}
+
+                                                <div style="width: 20px" class="card"> X </div>
+
+                                                {% if jogo.placar_adversario is not None %}
+                                                    <div style="width: 20px" class="card {% if jogo.placar_real > jogo.placar_adversario %}red{% elif jogo.placar_real < jogo.placar_adversario %}green{% else %}grey{% endif %}">
+                                                        {{ jogo.placar_adversario }}
+                                                    </div>
+                                                {% endif %}
+
+                                                </li>
+                                             </ul>
+                                        </div>
+
+                                        <div>
+                                            <h6> {{ jogo.adversario.nome }}</h6>
+                                        </div>
+                                    </div>
                             {% endfor %}
-                        </ul>
+
 
                         <div row>
                             <div class="center-align">
