--- a/jogo/templates/jogo/time.html
+++ b/jogo/templates/jogo/time.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="row">
-        <div class="col s12 m6 l6">
+        <div class="col s12 m4 l4">
 
              <div class="card hoverable">
                 <div class="card-content">
@@ -51,7 +51,9 @@
                     </ul>
                 </div>
             </div>
+        </div>
 
+        <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
                     <span class="card-title">Curiosidades</span>
