mudancas de telas

--- a/jogo/templates/jogo/atletas.html
+++ b/jogo/templates/jogo/atletas.html
@@ -2,12 +2,12 @@
 {% block title %}Atletas|Realmatismo Fc {% endblock %}
 {% block main %}
     <ul class="collection with-header">
-        <li class="collection-header"><h4>Atletas</h4></li>
+        <li class="collection-header"><h4 class="center">Atletas</h4><hr class="deep-orange"></li>
     {% for atleta in atletas %}
         <li class="collection-item avatar">
             <img src="media/{{ atleta.imagem }}" alt="" class="circle">
             <span class="title">{{ atleta.nome }} "{{ atleta.apelido }}" {{ atleta.sobrenome }}</span>
-            <a href="{% url 'atleta' atleta.pk %}" class="secondary-content"><i class="fas fa-user" aria-hidden="true"></i> Detalhes</a>
+            <a style="color: black" href="{% url 'atleta' atleta.pk %}" class="secondary-content"><i class="fas fa-user" aria-hidden="true"></i> Detalhes</a>
         </li>
     {% empty %}
         Sem atletas
