--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -6,7 +6,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Artilharia</span>
+                    <span class="card-title center">Artilharia
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
@@ -31,7 +33,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Assistencias</span>
+                    <span class="card-title center">Assistencias
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
@@ -59,7 +63,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Roubadas</span>
+                    <span class="card-title center">Roubadas
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
@@ -85,7 +91,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Defesas</span>
+                    <span class="card-title center">Defesas
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
@@ -111,7 +119,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Jogos Disputados</span>
+                    <span class="card-title center">Jogos Disputados
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
@@ -136,7 +146,9 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Minutos Jogados</span>
+                    <span class="card-title center">Minutos Jogados
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <thead>
                             <tr>
