--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -5,7 +5,10 @@
         <div class="col s12 m12 l12">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title center">Perfil Atleta</span>
+                    <span class="card-title center">Perfil Atleta
+                        <hr class="deep-orange">
+                    </span>
+
                     <div class="row">
                         <div class="col s4">
                             <img src="../media/{{atleta.imagem}}" alt=""  style="height: 100%; width: 100%" />
@@ -36,7 +39,9 @@
         <div class="col s12 m12 l12">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title center">Dados Atleta</span>
+                    <span class="card-title center">Dados Atleta
+                        <hr class="deep-orange">
+                    </span>
                     <table>
                         <tr>
                             <td>J</td>
