mudancas de telas

--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -74,7 +74,7 @@
                                                 </td>
                                                 <td>
                                                     {% if t.assistencia is not None %}
-                                                        {{ t.assistencia }}
+                                                        {{ t.asssitencia }}
                                                     {% else %}
                                                         0
                                                     {% endif %}
