--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -6,7 +6,7 @@
     <div class="col s12 m4">
         <div class="card hoverable">
             <div class="card-content">
-                <span class="card-title">Próximos Jogos</span>
+                <span class="card-title">Próximo Jogo</span>
                     {% if proximos_jogos.count > 0 %}
                         <ul class="collection" style="border: none">
                         {% for jogo in proximos_jogos %}
@@ -23,7 +23,7 @@
                         {% endfor %}
                           </ul>
                     {% else %}
-                        Sem Jogos Realizados
+                        Sem Jogos Previsto.
                     {% endif %}
             </div>
         </div>
@@ -32,7 +32,7 @@
     <div class="col s12 m4">
         <div class="card hoverable">
             <div class="card-content">
-                <span class="card-title">Jogos Anteriores</span>
+                <span class="card-title">Último Jogo</span>
                     {% if jogos_anteriores.count > 0 %}
                         <ul class="collection" style="border: none">
                         {% for jogo in jogos_anteriores %}
