--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -33,7 +33,7 @@
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title center">Assistencias
+                    <span class="card-title center">Assistências
                         <hr class="deep-orange">
                     </span>
                     <table>
