--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -23,7 +23,7 @@
                         {% endfor %}
                           </ul>
                     {% else %}
-                        Sem Jogos Previsto.
+                        Sem Jogo Previsto.
                     {% endif %}
             </div>
         </div>
@@ -51,7 +51,7 @@
                         {% endfor %}
                           </ul>
                     {% else %}
-                        Sem Jogos Realizados
+                        Sem Jogo Realizado.
                     {% endif %}
             </div>
         </div>
