--- a/jogo/templates/jogo/noticia.html
+++ b/jogo/templates/jogo/noticia.html
@@ -9,7 +9,7 @@
                     {{ noticia.corpo }}
                 </p>
                 <br>
-                publicado: {{ noticia.data_inclusao|date:"d M Y" }}
+                publicado: {{ noticia.data_inclusao|date:"d/m/Y" }}
             </div>
         </div>
     </div>
