--- a/jogo/templates/jogo/time.html
+++ b/jogo/templates/jogo/time.html
@@ -61,14 +61,13 @@
             <div class="card hoverable">
                 <div class="card-content">
                     <span class="card-title">Curiosidades <hr class="deep-orange"></span>
-
                     Maior Vitoria: {{ maior_vitoria }} <br>
                     Maior Derrota: {{ maior_derrota }} <br>
-                    Jogador Mais Velho: {{ jogador_velho.nome }} <br>
-                    Jogador Mais Novo:  {{ jogador_novo.nome }}   <br>
                     Media idade: {{ media_idade }} <br>
                     Media de gols: {{ media_gols }} <br>
-                    Media de gols Sofridos: {{ media_sofridos }}
+                    Media de gols Sofridos: {{ media_sofridos }}<br>
+                    Jogador Mais Velho: {{ jogador_velho.nome }} ({{ jogador_velho.idade }}) <br>
+                    Jogador Mais Novo:  {{ jogador_novo.nome }} ({{ jogador_novo.idade }})   <br>
                 </div>
             </div>
         </div>
