--- a/jogo/templates/jogo/artilharia.html
+++ b/jogo/templates/jogo/artilharia.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Minutos|Realmatismo Fc {% endblock %}
+{% block title %}Artilharia|Realmatismo Fc {% endblock %}
 {% block main %}
 <div class="row">
         <div class="col s12 m4 l4">
