--- a/jogo/templates/jogo/assistencias.html
+++ b/jogo/templates/jogo/assistencias.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Minutos|Realmatismo Fc {% endblock %}
+{% block title %}Assistências|Realmatismo Fc {% endblock %}
 {% block main %}
 <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Assistencias</span>
+                    <span class="card-title">Assistências</span>
                     <table>
                         <thead>
                             <tr>
@@ -24,7 +24,7 @@
                             {% endfor %}
                          </tbody>
                     </table>
-                    <a href="{% url 'assistencias' %}">Ver lista completa</a>
+
                 </div>
             </div>
         </div>
