--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -42,24 +42,16 @@
                     <span class="card-title center">Dados Atleta
                         <hr class="deep-orange">
                     </span>
-                    <table>
-                        <tr>
-                            <td>J</td>
-                            <td>G</td>
-                            <td>A</td>
-                            <td>Def.</td>
-                            <td>Rou.</td>
-                            <td>Min.</td>
-                        </tr>
-                        <tr>
-                            <td>{{ atleta.jogos_realizados }}</td>
-                            <td>{{ atleta.gols }}</td>
-                            <td>{{ atleta.assistencia }}</td>
-                            <td>{{ atleta.defesa }}</td>
-                            <td>{{ atleta.roubo }}</td>
-                            <td>{{ atleta.minutos }}</td>
-                        </tr>
-                    </table>
+
+                    <ul class="collection">
+                        <li class="collection-item"><div>Jogos Disputados<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.jogos_realizados }}</a></div></li>
+                        <li class="collection-item"><div>Gols<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.gols }}</a></div></li>
+                        <li class="collection-item"><div>Assistências<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.assistencia }}</a></div></li>
+                        <li class="collection-item"><div>Defesas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.defesa }}</a></div></li>
+                        <li class="collection-item"><div>Roubadas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.roubo }}</a></div></li>
+                        <li class="collection-item"><div>Minutos<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.minutos }}</a></div></li>
+                     </ul>
+
                 </div>
             </div>
         </div>
