--- a/jogo/templates/jogo/jogos-disputados.html
+++ b/jogo/templates/jogo/jogos-disputados.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Minutos|Realmatismo Fc {% endblock %}
+{% block title %}Jogos Disputados|Realmatismo Fc {% endblock %}
 {% block main %}
      <div class="col s12 m4 l4">
             <div class="card hoverable">
