--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -6,7 +6,7 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title center">Perfil Atleta
-                        <hr class="deep-orange">
+                        <hr class="deep-orange"/>
                     </span>
 
                     <div class="row">
@@ -40,7 +40,7 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title center">Dados Atleta
-                        <hr class="deep-orange">
+                        <hr class="deep-orange"/>
                     </span>
 
                     <ul class="collection">
@@ -51,7 +51,7 @@
                         <li class="collection-item"><div>Roubadas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.roubo }}</a></div></li>
                         <li class="collection-item"><div>Minutos<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.minutos }}</a></div></li>
                      </ul>
-                    
+
                 </div>
             </div>
         </div>
