--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -30,6 +30,10 @@
             </div>
         </div>
 
+        {% for t in teste %}
+            {{ t }}
+        {% endfor %}
+
         <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
