--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -41,7 +41,7 @@
                                 <ul class="pagination">
                                     <li>
                                         {% if jogos.has_previous %}
-                                            <a href="?page={{ jogos.previous_page_number }}">
+                                            <a href="?page={{ page_obj.previous_page_number }}">
                                                <i class="fas fa-step-backward" aria-hidden="true"></i>
                                             </a>
 
@@ -53,7 +53,7 @@
 
                                     </li>
 
-                                    {% for i in jogos.paginator.page_range %}
+                                    {% for i in page_obj.paginator.page_range %}
                                         {% if jogos.number == i %}
                                             <li class="active deep-orange"><a href="#!">{{ i }}</a></li>
                                         {% else %}
@@ -64,7 +64,7 @@
                                      {% if jogos.has_next %}
 
                                          <li class="waves-effect">
-                                             <a href="?page={{ jogos.next_page_number }}">
+                                             <a href="?page={{ page_obj.next_page_number }}">
                                                  <i class="fas fa-step-forward fa-2x" aria-hidden="true"></i>
                                              </a>
 
