--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -3,6 +3,27 @@
 {% block main %}
 {% load static %}
 <div class="row">
+
+
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                 <span class="card-title center">Últimos Resultados
+                     <hr class="deep-orange">
+                 </span>
+                <ul class="pagination">
+                    {% for p in performace %}
+                        <li>
+                        <div class="card {% if p == 'V' %}green{% elif p == 'D'%}red{% else %}grey{% endif %}">
+                            <h6 style="margin: 10px; padding: 10px">{{ p }}</h6>
+                        </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="col s12 m4">
         <div class="card hoverable">
             <div class="card-content">
