--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -5,6 +5,25 @@
 <div class="row">
 
 
+     <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-content">
+                 <span class="card-title center">Desempenho
+                     <hr class="deep-orange">
+                 </span>
+
+                <span style="margin: 10px; padding: 10px;" >
+                    Aproveitamento:
+                </span>
+                <span style="margin: 10px; padding: 10px; color: {% if teste >= 50 %}green{% else %}red{% endif %}" >
+                    {{ teste }}%
+                </span>
+
+            </div>
+        </div>
+     </div>
+
+
     <div class="col s12 m4">
         <div class="card hoverable">
             <div class="card-content">
@@ -20,6 +39,7 @@
                         </li>
                     {% endfor %}
                 </ul>
+
             </div>
         </div>
     </div>
