Criando aproveitamento Individual

--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -48,8 +48,9 @@
                         <li class="collection-item"><div>Gols<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.gols }}</a></div></li>
                         <li class="collection-item"><div>Assistências<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.assistencia }}</a></div></li>
                         <li class="collection-item"><div>Defesas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.defesa }}</a></div></li>
-                        <li class="collection-item"><div>Roubadas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.roubo }}</a></div></li>
                         <li class="collection-item"><div>Minutos<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.minutos }}</a></div></li>
+                        <li class="collection-item"><div>Aproveitamento Individual<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.taxa_presente }}</a></div></li>
+
                      </ul>
 
                 </div>
