--- a/jogo/templates/jogo/desempenho.html
+++ b/jogo/templates/jogo/desempenho.html
@@ -1,27 +1,26 @@
 {% extends 'base.html' %}
-{% block title %}Roubadas|Realmatismo Fc {% endblock %}
+{% block title %}Desempenho|Realmatismo Fc {% endblock %}
 {% block main %}
 <div class="col s12 m4 l4">
             <div class="card hoverable">
                 <div class="card-content">
-                    <span class="card-title">Roubadas</span>
+                    <span class="card-title">Desempenho</span>
                     <table>
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>Roubadas</th>
+                                <th>Desempenho</th>
                             </tr>
                         </thead>
                          <tbody>
-                            {% for atleta in ladroes %}
+                            {% for atleta in lista %}
                                 <tr>
                                     <td>{{ atleta.nome }}</td>
-                                    <td>{{ atleta.roubo }}</td>
+                                    <td>{{ atleta.taxa_presente }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
-                    </table>
-                    <a href="{% url 'roubadas' %}">Ver lista completa</a>
+                    </table>                 
                 </div>
             </div>
         </div>
