Criando aproveitamento Individual

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <meta title="Realmatismo Futebol Clube">
+    <meta name="description" content="Site do Clube amador Realmatismo Futebol Clube com sua Agenda e Estatisticas">
+    <meta name="robots" content="index, follow">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <!-- Compiled and minified CSS -->
