Status jogadores e info tela inicial.

--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -28,6 +28,7 @@
                                          {{ atleta.numero_camisa }}
                                     {% endif %}
                             <br>
+                            Status: {{ atleta.status }}
                         </div>
                     </div>
                 </div>
