--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -4,7 +4,6 @@
 {% load static %}
 <div class="row">
 
-
      <div class="col s12 m4">
         <div class="card hoverable">
             <div class="card-content">
@@ -22,7 +21,6 @@
             </div>
         </div>
      </div>
-
 
     <div class="col s12 m4">
         <div class="card hoverable">
@@ -53,11 +51,12 @@
                         {% for jogo in proximos_jogos %}
                             <li class="collection-item avatar">
                                 <a href="{% url 'jogo' jogo.pk %}" style="text-decoration: none;color: black">
-                              <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
+                              <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="img-adv" class="circle">
                               <span class="title">{{ jogo.adversario.nome }}</span>
                                 <br>
-                              <p>{{ jogo.data }} <br>
-                                 {{ jogo.local.nome }}
+                              <p><b style="color: orangered">Data:</b> {{ jogo.data }} <br>
+                                  <b style="color: orangered">Local:</b>{{ jogo.local.nome }}<br>
+                                  <b style="color: orangered">Info:</b>{{ detalhes_ultimo }}
                               </p>
                               </a>
                             </li>
@@ -81,9 +80,12 @@
                                 <a href="{% url 'jogo' jogo.pk %}" style="text-decoration: none;color: black">
                                   <img src="media/{{ jogo.adversario.escudo_adversario }}" alt="" class="circle">
                                   <span class="title">{{ jogo.adversario.nome }}</span>
-                                  <p>{{ jogo.data }} <br>
+                                  <p>
+                                      <b style="color: orangered">Data:</b>{{ jogo.data }} <br>
                                       {% if jogo.placar_real is not None %}
-                                          Placar: {{ jogo.placar_real }} X {{ jogo.placar_adversario }}
+                                          <b style="color: orangered">Placar:</b> {{ jogo.placar_real }} X {{ jogo.placar_adversario }}
+                                      {% else %}
+                                          Jogo não Realizado.
                                       {% endif %}
 
                                   </p>
