Status jogadores e info tela inicial.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,6 +11,6 @@
 
 <div class="footer-copyright ">
     <div class="container black-text text-darken-2">
-        © 2018 Todos os direitos reservados para Diego Denzer versao 1.0.3
+        © 2018-2019 Todos os direitos reservados para Diego Denzer versao 1.0.5
     </div>
 </div>
