--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
           <li><a href="{% url 'atletas' %}">Atletas</a></li>
           <li><a href="{% url 'time' %}">Time</a></li>
           <li><a href="{% url 'estatistica' %}">Tops</a></li>
+          <li><a href="{% url 'adversarios' %}">Adversários</a></li>
           <li><a href="{% url 'noticias' %}">Notícias</a></li>
           <li><a href="{% url 'galeria' %}">Fotos</a></li>
 
@@ -47,6 +48,7 @@
       <li><a href="{% url 'atletas' %}"><i class="fas fa-user fa-lg"></i> Atletas</a></li>
       <li><a href="{% url 'time' %}"><i class="fas fa-users fa-lg"></i>Time</a></li>
       <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg"></i>Tops</a></li>
+       <li><a href="{% url 'adversarios' %}"><i class="far fa-question-circle fa-lg"></i>Adversários</a></li>
       <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg"></i>Notícias</a></li>
       <li><a href="{% url 'galeria' %}"><i class="fas fa-camera fa-lg"></i>Fotos</a></li>
   </ul>
